// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Filter: <PriceSlider /> should render with custom props 1`] = `
<PriceSlider
  classes={
    {
      "rangeSliderContainer": "tss-19chdeb-PriceSlider-rangeSliderContainer",
      "rangeSliderHandleInner": "tss-4z30eu-PriceSlider-rangeSliderHandleInner",
      "rangeSliderHandleOuter": "tss-173ivhj-PriceSlider-rangeSliderHandleOuter",
      "rangeSliderOuterRange": "tss-im1gf-PriceSlider-rangeSliderOuterRange",
      "rangeSliderRange": "tss-tl8tkl-PriceSlider-rangeSliderRange",
      "wrapper": "tss-1qrpeu7-PriceSlider-wrapper",
    }
  }
  id="foo"
  max={100}
  min={0}
  onChange={[Function]}
  useLinearEasing={false}
  value={null}
  values={
    [
      5,
      50,
    ]
  }
/>
`;

exports[`Filter: <PriceSlider /> should render with default props 1`] = `
<PriceSlider
  classes={
    {
      "rangeSliderContainer": "tss-19chdeb-PriceSlider-rangeSliderContainer",
      "rangeSliderHandleInner": "tss-4z30eu-PriceSlider-rangeSliderHandleInner",
      "rangeSliderHandleOuter": "tss-173ivhj-PriceSlider-rangeSliderHandleOuter",
      "rangeSliderOuterRange": "tss-im1gf-PriceSlider-rangeSliderOuterRange",
      "rangeSliderRange": "tss-tl8tkl-PriceSlider-rangeSliderRange",
      "wrapper": "tss-1qrpeu7-PriceSlider-wrapper",
    }
  }
  id="foo"
  max={100}
  min={0}
  onChange={[Function]}
  useLinearEasing={false}
  value={null}
/>
`;
